fix horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -457,7 +457,7 @@ h4 {
 }
 
 .divider {
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding-top: 2rem;
 }
